# ChemAugur

./: .gitignore  README.md  pyproject.toml
reqs/: development.in  development.txt
src/chem_augur/data/: analysis_Compound_000000001_000500000_20250424_211543.txt  analysis_Compound_001000001_001500000_20250424_211004.txt  pubchem_sdf_download.py  sdf_inspector.py
src/chem_augur/features/: molecular_graph.py
src/chem_augur/models/gnn/: gcn_model.py
src/chem_augur/prediction/: predict_simple.py
src/chem_augur/training/: gnn_train.py  train_simple.py
src/features/: molecular_graph.py
src/models/gnn/: gcn_model.py
src/prediction/: predict_simple.py
src/training/: train_simple.py
