[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chem_augur"
version = "0.0.0"
authors = [
    { name = "Trevor Stahl" },
]
description = "An open source project aiming to use graph neural networks to predict the physical properties of chemicals based only on their molecular structure and atomic makeup."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL3" }
keywords = ["Chemistry", "Machine Learning", "GNN"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch~=2.6",
    "torchvision~=0.21.0",
    "torch_geometric~=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4.1",  # Development tools
    "black>=25.1.0",
]
test = [
    # "pytest>=8.0.0",    # Testing framework
    # "pytest-cov>=5.0.0",
]
docs = [
    # "sphinx>=7.0.0",    # Documentation
    # "furo>=2023.9.0",
]

[tool.setuptools.packages.find]
where = ["."]  # Directory containing your Python packages
include = ["*"]
namespaces = true

[tool.black]
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pip-tools]
generate-hashes = false
resolver = "backtracking"